--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,10 @@ qt4_wrap_ui(UI_FILES mainwindow.ui)
 qt4_wrap_cpp(MOC_FILES mainwindow.h myitemdelegate.h)
 
 set(CMAKE_CXX_FLAGS         "-std=c++11")
-set(CMAKE_CXX_FLAGS_DEBUG   "-Og -g -fsanitize=address,undefined")
+set(CMAKE_CXX_FLAGS_DEBUG   "-O0 -g -fsanitize=address,undefined")
 set(CMAKE_CXX_FLAGS_RELEASE "-O2 -g")
+
+include_directories(.)
 
 add_executable(
     qprofiler
@@ -34,6 +36,26 @@ add_executable(
     string_pool.cpp
     string_ref.h
     string_ref.cpp
+    demangle/demangle.h
+    demangle/demangle.cpp
+)
+
+add_executable(
+    demangle_test
+    string_ref.h
+    string_ref.cpp
+    demangle/demangle.h
+    demangle/demangle.cpp
+    demangle/demangle_test.cpp
+)
+
+add_executable(
+    demangle_app
+    string_ref.h
+    string_ref.cpp
+    demangle/demangle.h
+    demangle/demangle.cpp
+    demangle/demangle_app.cpp
 )
 
 target_link_libraries(
